sample-three/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  labels:
    name: dashboard-ingress
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongodb-service
                port:
                  number: 27017
          - pathType: Prefix
            path: /analytics
            backend:
              service:
                name: analytics-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /shopping
            backend:
              service:
                name: shopping-service
                port:
                  number: 8080
