sample-three/dashboard-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  labels:
    name: dashboard-ingress
spec:
  tls:
    - hosts:
        - myapp.com
      secretName: myapp-secret-tls
  rules:
    - host: myapp.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: myapp-internal-service
                port:
                  number: 4050
