sample-three/subdomain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: analytics.myapp.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: analytics-service
                port:
                  number: 3000
    - host: shopping.myapp.com
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: shopping-service
              port:
                number: 8080
